--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#212529">
-  <title>Bottom navbar example · Bootstrap v5.3</title>
+  <title>Teste</title>
 
   <script type="module" src="./js/main.js"></script>
 
