add coisas do vite

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#212529">
   <title>Teste</title>
 
-  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/index.js"></script>
 
 <style>
   .cursor-pointer{
