--- a/src/index.html
+++ b/src/index.html
@@ -156,48 +156,28 @@
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Digite o titulo de sua tarefa" aria-label="Recipient's username" aria-describedby="button-addon2" required>
               <button class="btn btn-outline-success" type="submit" id="button-addon2">
-                Adicionar tarefa
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                </svg> Adicionar tarefa
               </button>
             </div>
           </form>
         </div>
         <div class="list-group">
-          <label class="list-group-item list-group-item-action cursor-pointer d-flex gap-3">
+          <!-- <label class="list-group-item list-group-item-action cursor-pointer d-flex gap-3">
             <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
             <span class="pt-1 form-checked-content">
-              <strong>Finish sales report</strong>
+              <strong>${value}</strong>
               <small class="d-block text-body-secondary">
-                <svg class="bi me-1" width="1em" height="1em">
-                  <use xlink:href="#calendar-event" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-calendar-event me-1" viewBox="0 0 16 16">
+                  <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
+                  <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
                 </svg>
                 1:00–2:00pm
               </small>
             </span>
-          </label>
-          <label class="list-group-item list-group-item-action cursor-pointer d-flex gap-3">
-            <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
-            <span class="pt-1 form-checked-content">
-              <strong>Weekly All Hands</strong>
-              <small class="d-block text-body-secondary">
-                <svg class="bi me-1" width="1em" height="1em">
-                  <use xlink:href="#calendar-event" />
-                </svg>
-                2:00–2:30pm
-              </small>
-            </span>
-          </label>
-          <label class="list-group-item list-group-item-action cursor-pointer d-flex gap-3">
-            <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
-            <span class="pt-1 form-checked-content">
-              <strong>teste</strong>
-              <small class="d-block text-body-secondary">
-                <svg class="bi me-1" width="1em" height="1em">
-                  <use xlink:href="#alarm" />
-                </svg>
-                Tomorrow
-              </small>
-            </span>
-          </label>
+          </label> -->
+          
         </div>
       </div>
     </div>
