--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#212529">
-  <title>Teste</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>My Awesome App</title>
+  <meta name="description" content="My Awesome App description">
+  <link rel="icon" href="/img/favicon.ico">
+  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" sizes="180x180">
+  <link rel="android-chrome-icon" href="/img/android-chrome-192x192.png" sizes="192x192">
+  <link rel="android-chrome-icon" href="/img/android-chrome-512x512.png" sizes="512x512">
+  <link rel="mask-icon" href="/img/mask-icon.svg" color="#FFFFFF">
+  <meta name="theme-color" content="#4285F4">
 
   <script type="module" src="./js/index.js"></script>
 
