--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="android-chrome-icon" href="/todolist/android-chrome-192x192.png" sizes="192x192">
   <link rel="android-chrome-icon" href="/todolist/android-chrome-512x512.png" sizes="512x512">
   <link rel="mask-icon" href="/todolist/mask-icon.svg" color="#FFFFFF">
-  <meta name="theme-color" content="#4285F4">
+  <meta name="theme-color" content="#3367D6">
 
 
   <style>
