--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="android-chrome-icon" href="/img/android-chrome-192x192.png" sizes="192x192">
   <link rel="android-chrome-icon" href="/img/android-chrome-512x512.png" sizes="512x512">
   <link rel="mask-icon" href="/img/mask-icon.svg" color="#FFFFFF">
-  <meta name="theme-color" content="#4285F4">
+  <meta name="theme-color" content="#3367D6">
 
   <script type="module" src="./js/index.js"></script>
 
