ocultando o que nao ta usando

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
   <main class="container">
     <div class="mb-2 pt-3 d-flex justify-content-between">
       <h5 class="text-primary fw-bold text-uppercase">lista de tarefas</h5>
-      <a class="nav-item dropdown">
+      <!-- <a class="nav-item dropdown">
         <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
             class="bi bi-three-dots-vertical mt-1" viewBox="0 0 16 16">
@@ -170,13 +170,13 @@
         </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="#">Opções</a></li>
-          <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
         </ul>
-      </a>
+      </a> -->
     </div>
 
     <div class="d-flex flex-column pb-4 gap-4 align-items-center justify-content-center">
@@ -230,8 +230,8 @@
   <nav class="fixed-bottom">
     <div class="container-fluid d-flex justify-content-between">
       <div class="align-self-center">
-        <a class="navbar-brand me-3" href="#">Pendentes</a>
-        <a class="navbar-brand" href="#">Completas</a>
+        <!-- <a class="navbar-brand me-3" href="#">Pendentes</a>
+        <a class="navbar-brand" href="#">Completas</a> -->
       </div>
       <ul class="navbar-nav">
         <li class="nav-item dropup">
