--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       sizes="512x512"
     />
     <link rel="mask-icon" href="/img/mask-icon.svg" color="#FFFFFF" />
-    <!-- <meta name="theme-color" content="#FFFFFF" /> -->
+    <meta name="theme-color" content="#DC3545" />
 
     <script type="module" src="./js/index.js"></script>
 
