--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       sizes="512x512"
     />
     <link rel="mask-icon" href="/img/mask-icon.svg" color="#FFFFFF" />
-    <meta name="theme-color" content="#DC3545" />
+    <meta name="theme-color" content="#FFFFFF" />
 
     <script type="module" src="./js/index.js"></script>
 
@@ -169,7 +169,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="Digite sua tarefa"
+                placeholder="Digite suas tarefas"
                 aria-label="Recipient's username"
                 aria-describedby="button-addon2"
                 required
