--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       sizes="512x512"
     />
     <link rel="mask-icon" href="/todolist/mask-icon.svg" color="#FFFFFF" />
-    <!-- <meta name="theme-color" content="#FFFFFF" /> -->
+    <meta name="theme-color" content="#FFFFFF" />
 
 
     <style>
@@ -170,7 +170,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="Digite sua tarefa"
+                placeholder="Digite suas tarefas"
                 aria-label="Recipient's username"
                 aria-describedby="button-addon2"
                 required
