main <feat> add transicao ao concluir tarefas

--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,7 @@
       <div class="container d-flex justify-content-between">
         <div class="nav nav-underline px-3" role="tablist">
           <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#pending-tab-pane" type="button" role="tab" aria-controls="pending-tab-pane" aria-selected="true">Pendentes</a>
-          <a class="nav-link" data-bs-toggle="tab" data-bs-target="#complete-tab-pane" type="button" role="tab" aria-controls="complete-tab-pane" aria-selected="false">Completas</a>
+          <a class="nav-link" data-bs-toggle="tab" data-bs-target="#complete-tab-pane" type="button" role="tab" aria-controls="complete-tab-pane" aria-selected="false">Concluídas</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item dropup">
