--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         display: block !important;
       }
     </style>
-    <script type="module" crossorigin src="/todolist/index.B0s8nDSs.js"></script>
+    <script type="module" crossorigin src="/todolist/index.D-nno1o2.js"></script>
     <link rel="stylesheet" crossorigin href="/todolist/index.css">
   <link rel="manifest" href="/todolist/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/todolist/registerSW.js"></script></head>
 
@@ -277,7 +277,7 @@
       <div class="container d-flex justify-content-between">
         <div class="nav nav-underline px-3" role="tablist">
           <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#pending-tab-pane" type="button" role="tab" aria-controls="pending-tab-pane" aria-selected="true">Pendentes</a>
-          <a class="nav-link" data-bs-toggle="tab" data-bs-target="#complete-tab-pane" type="button" role="tab" aria-controls="complete-tab-pane" aria-selected="false">Completas</a>
+          <a class="nav-link" data-bs-toggle="tab" data-bs-target="#complete-tab-pane" type="button" role="tab" aria-controls="complete-tab-pane" aria-selected="false">Concluídas</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item dropup">
