--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         display: block !important;
       }
     </style>
-    <script type="module" crossorigin src="/todolist/index.D-nno1o2.js"></script>
+    <script type="module" crossorigin src="/todolist/index.BCME63CV.js"></script>
     <link rel="stylesheet" crossorigin href="/todolist/index.css">
   <link rel="manifest" href="/todolist/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/todolist/registerSW.js"></script></head>
 
