main <style> mudando temas

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       sizes="512x512"
     />
     <link rel="mask-icon" href="/img/mask-icon.svg" color="#FFFFFF" />
-    <meta name="theme-color" content="#FFFFFF" />
+    <meta name="theme-color" content="#0D6EFD" />
 
     <script type="module" src="./js/index.js"></script>
 
@@ -123,9 +123,11 @@
       </symbol>
     </svg>
 
+    <div class="position-absolute w-100 z-n1" style="background: linear-gradient(180deg, rgba(13,110,253,1) 20%, rgba(255,255,255,1) 80%); min-height: 300px;"></div>
+
     <main class="container">
       <div class="mb-2 pt-3 d-flex justify-content-between">
-        <h5 class="text-primary fw-bold text-uppercase">Tarefas</h5>
+        <h5 class="text-white fw-bold text-uppercase">Tarefas</h5>
         <a class="nav-item dropdown">
           <a
             class="nav-link"
@@ -139,7 +141,7 @@
               width="16"
               height="16"
               fill="currentColor"
-              class="bi bi-three-dots-vertical mt-1"
+              class="bi bi-three-dots-vertical text-white mt-1"
               viewBox="0 0 16 16"
             >
               <path
@@ -214,7 +216,7 @@
                     required
                   />
                   <button
-                    class="btn btn-outline-success"
+                    class="btn btn-primary btn-group btn-smb"
                     type="submit"
                     id="button-addon2"
                   >
